# mindcore

./: .gitignore  AGENTS.md  BENCHMARK_PROGRESS.md  Cargo.toml  DECISIONS.md  MEMCORE_ARCHITECTURE.md  MEMCORE_RESEARCH.md  MINDCORE_ARCHITECTURE.md  MINDCORE_RESEARCH.md  README.md
.dial/: current_context.md
examples/: benchmark.rs  validate.rs
mindcore-bench/: Cargo.toml  README.md
mindcore-bench/specs/: PRD.md
mindcore-bench/src/: dataset.rs  download.rs  ingest.rs  judge.rs  llm.rs  main.rs  metrics.rs  retrieval.rs  verify.rs
research/: gap_analysis_2026_03.md  similar_projects_landscape_2026.md
results/: longmemeval_full.jsonl  longmemeval_v2.jsonl  longmemeval_v3-draft.jsonl  longmemeval_v3.jsonl  test3.jsonl  v2_test5.jsonl
specs/: PRD.md
src/: engine.rs  error.rs  lib.rs
src/callbacks/: llm.rs  mod.rs
src/context/: budget.rs  mod.rs
src/embeddings/: backend.rs  candle_native.rs  fallback.rs  mod.rs  noop.rs  pooling.rs
src/ingest/: mod.rs  passthrough.rs
src/memory/: activation.rs  hash_dedup.rs  mod.rs  pruning.rs  relations.rs  similarity_dedup.rs  store.rs
src/scoring/: activation.rs  category.rs  composite.rs  importance.rs  memory_type.rs  mod.rs  recency.rs
src/search/: builder.rs  fts5.rs  hybrid.rs  mod.rs  query_expand.rs  vector.rs
src/storage/: encryption.rs  engine.rs  migrations.rs  mod.rs  schema.rs  two_tier.rs
src/traits/: consolidation.rs  evolution.rs  mod.rs  record.rs  reranker.rs  scoring.rs
tests/: candle_e2e.rs  full_pipeline.rs  hybrid_e2e.rs  integration.rs  scoring_integration.rs  vector_search.rs
