[package]
name = "mindcore-bench"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "LongMemEval benchmark harness for MindCore"
publish = false

[[bin]]
name = "mindcore-bench"
path = "src/main.rs"

[dependencies]
mindcore = { path = "..", features = ["full"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
anyhow = "1"
futures = "0.3"
